fix filter nav on mobile

--- a/src/css/filters.less
+++ b/src/css/filters.less
@@ -28,6 +28,13 @@
 			background: @bg;
 			font-size: 12px;
 		}
+		select {
+			width: 100%;
+			margin: 0;
+			padding: 0;
+			border: 0;
+			height: 38px;
+		}
 		.clear-filter {
 			position: absolute;
 			display: block;
